# mmux-emacs-core

./: Makefile.am  NEWS  README  README.md  TODO.org  configure.ac  configure.sh
doc/: elisp-macros.texi  mmux-emacs-core.texi
meta/autoconf/: mmux-emacs-constant-tests.m4
meta/scripts/: mmux-emacs-core.pc.in
src/: cc-basics.el  cc-bytevector-objects.el  cc-constants.el.in  cc-core.el  cc-number-objects.el  cc-numeric-comparison-operations.el  cc-numeric-type-definitions.el  mmec-basics.el  mmec-bytevector-objects.el  mmec-constants.el.in  mmec-mathematics.el  mmec-number-objects.el  mmec.el  mmux-emacs-core-bytevectors.c  mmux-emacs-core-constants.c  mmux-emacs-core-constants.h.in  mmux-emacs-core-errors.c  mmux-emacs-core-internals.h  mmux-emacs-core-library.c  mmux-emacs-core-mathematics.c  mmux-emacs-core-numbers.c  mmux-emacs-core-user-pointer-objects.c  mmux-emacs-core.h
tests/: bytevector-objects.el  ctypes-comparison.el  demo.el  mathematics.el  number-objects.el  user-pointer-objects.el  version.el
